kubernetes/test/https.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kustomize-https-only
spec:
  redirectScheme:
    scheme: https
