kubernetes/test/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: director-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 1234
  selector:
    app: director
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: cors-anywhere-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 11100
  selector:
    app: cors-anywhere
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: api
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: mynctl-service
spec:
  ports:
    - name: web
      port: 11101
      targetPort: 11101
    - name: events
      port: 18101
      targetPort: 18101
  selector:
    app: mynctl
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
    - name: web
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - name: web
      port: 6379
      targetPort: 6379
  selector:
    app: redis
status:
  loadBalancer: { }
